[package]
name = "maui"
version = "0.0.0"
edition = "2018"
authors = ["Nylonicious"]
license = "MIT"
repository = "https://github.com/nylonicious/maui"
description = "Reserved for future use."

[dependencies]
bytes = { version = "1.0" }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = { version = "1.0" }
tokio = { version = "1.0", features = ["macros", "net", "rt", "sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
